Add JVM arguments to prevent a warning during the runIde task