@@ -17,6 +17,10 @@ buildPlugin {
     destinationDirectory = project.file('../dist')
 }
 
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
 clean {
     delete buildPlugin.archiveFile
 }
